[tool.poetry]
name = "anonymizer"
version = "0.1.0"
description = "Small script developped to automatically remove patient personnal informations from text reports and images"
authors = ["Corentin Meyer <corentin.meyer@etu.unistra.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python-headless = "^4.5.5"
Pillow = "^9.0.0"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
numpy = "^1.22.1"
pandas = "^1.3.5"
ipython = "^8.0.1"
ipykernel = "^6.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
